--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,7 @@ if linkage != nil
 end
 
 target 'weatherapp' do
+  use_frameworks! :linkage => :static
   config = use_native_modules!
 
   use_react_native!(
