--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-config": "^1.5.5",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1"
   },
