--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "react": "19.0.0",
@@ -17,6 +18,7 @@
     "react-native-config": "^1.5.5",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1",
+    "react-native-storage": "^1.0.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
