--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-config": "^1.5.5",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1",
     "react-native-storage": "^1.0.1",
