--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-screens": "^4.9.2",
     "react-native-storage": "^1.0.1",
     "react-native-swipe-gestures": "^1.0.5",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
